// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionAmount should render 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
    data-testid="TransactionAmount"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Amount
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="Label-sc-1tj9hzr-0 fMWESr"
          color="success"
        >
          <span
            data-testid="AmountCrypto"
          >
            + 1 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
    >
      <div
        class="sc-bdfBwQ dnaihB"
        height="1em"
        width="1em"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render currency amount 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
    data-testid="TransactionAmount"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Amount
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="Label-sc-1tj9hzr-0 fMWESr"
          color="success"
        >
          <span
            data-testid="AmountCrypto"
          >
            + 1 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
    >
      <div
        class="sc-bdfBwQ dnaihB"
        height="1em"
        width="1em"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render label for multiple recipients 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
    data-testid="TransactionAmount"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Amount
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="Label-sc-1tj9hzr-0 fMWESr"
          color="success"
        >
          <span
            data-testid="AmountCrypto"
          >
            + 1 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
    >
      <div
        class="sc-bdfBwQ dnaihB"
        height="1em"
        width="1em"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionAmount should render label for multiple recipients 2`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 cHOkoL no-ligatures"
    data-testid="TransactionAmount"
  >
    <div
      class="flex-1 space-y-2 w-40 whitespace-nowrap"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Total Amount
      </div>
      <div
        class="font-semibold"
      >
        <div
          class="Label-sc-1tj9hzr-0 fMWESr"
          color="success"
        >
          <span
            data-testid="AmountCrypto"
          >
            + 1 DARK
          </span>
        </div>
      </div>
    </div>
    <div
      class="Circle__CircleWrapper-uw7h4j-0 bNDQMV border-theme-success-300 text-theme-success-600 dark:border-theme-success-600 ring-theme-background"
    >
      <div
        class="sc-bdfBwQ dnaihB"
        height="1em"
        width="1em"
      >
        <svg>
          received.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;
